fix touch effect holds after touchend on softwrap button

--- a/src/scss/prism/gapstyle.scss
+++ b/src/scss/prism/gapstyle.scss
@@ -417,6 +417,10 @@ div.code-toolbar {
           color: inherit;
           text-decoration: none;
         }
+
+        &.no-hover {
+          color: $toolbar-action-text-color;
+        }
       }
 
       .title {
